2006-09-14  Werner Koch  <wk@g10code.com>

	Released 0.9.0.

	* configure.ac: Check for S_PEERCRED.  Include check for socklen_t.
	* m4/sys_socket_h.m4, m4/onceonly.m4, m4/socklen.m4: New.
	* m4/Makefile.am: New.

2006-09-05  Werner Koch  <wk@g10code.com>

	* configure.ac (AH_BOTTOM): Define _ASSUAN_IN_LIBASSUAN.

2005-10-24  Werner Koch  <wk@g10code.com>

	* COPYING.LESSER: Added.
	* README.CVS: Renamed to ..
	* README.SVN: .. this.

2005-10-08  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Check for socket library and add it to
	LIBASSUAN_CONFIG_LIBS if necessary.

2005-10-07  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Invoke AC_CANONICAL_HOST.  Define _XOPEN_SOURCE,
	_XOPEN_SOURCE_EXTENDED and __EXTENSIONS__ on Solaris.
	Add stpcy as replacement function.
	Add setenv as replacement function (and check for unistd.h).

2005-06-20  Werner Koch  <wk@g10code.com>

	Released 0.6.10.

2004-12-22  Werner Koch  <wk@g10code.com>

	Released 0.6.9.

	For security reasons switched to automake 1.9.

2004-12-18  Werner Koch  <wk@g10code.com>

	* autogen.sh: Add Option --build-w32.

2004-12-07  Werner Koch  <wk@g10code.com>

	* configure.ac: Define HAVE_W32_SYSTEM and HAVE_DOSISH_SYSTEM.
	Add -lwsock2 to the config lib flags for W32.

2004-11-25  Werner Koch  <wk@g10code.com>

	Released 0.6.8.

2004-09-27  Werner Koch  <wk@g10code.com>

	* config.sub, config.guess: Updated. 

2004-06-23  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Check for <sys/uio.h>.

2004-06-08  Werner Koch  <wk@gnupg.org>

	Released 0.6.6.

2004-04-02  Thomas Schwinge  <schwinge@nic-nac-project.de>

	* autogen.sh: Added ACLOCAL_FLAGS.

2004-02-20  Werner Koch  <wk@gnupg.org>

	Released 0.6.4.

2004-02-11  Werner Koch  <wk@gnupg.org>

	* autogen.sh (check_version): Removed bashism and simplified.

2004-01-29  Werner Koch  <wk@gnupg.org>

	Released 0.6.3.

2003-12-18  Werner Koch  <wk@gnupg.org>

	Released 0.6.2.

2003-12-08  Werner Koch  <wk@gnupg.org>

	* TODO: New.