@@ -29,6 +29,7 @@ CLEANFILES =
 
 TESTS = fdpassing
 
+AM_CPPFLAGS = -DSRCDIR=$(srcdir)
 AM_CFLAGS = # $(GPG_ERROR_CFLAGS)
 
 noinst_HEADERS = common.h
