@@ -1,0 +1,9 @@
+Big Brother trust@unlimited.com 0.4.2-TC #1 PREEMPT Thu Aug 3 02:52:00 UTC 2006 TC Lockinos
+
+The programs included monitor each and every keystroke by its users
+and report them back for evaluation.  Use of this software is entirely
+voluntary, but non-compliance results in reducing the machine to an
+expensive paper-weight.
+
+There is no warranty whatsoever, and should we have made a mistake, we will
+come and sue you for taking advantage of that.
