@@ -1,3 +1,9 @@
+2006-09-19  Marcus Brinkmann  <marcus@g10code.de>
+
+	* tests/fdpassing.c (MOTD): New macro.
+	* tests/Makefile.am (AM_CPPFLAGS): New variable.
+	* tests/motd: New file.
+
 2006-09-14  Werner Koch  <wk@g10code.com>
 
 	Released 0.9.0.
